# skim

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
proptest-regressions/feed/: parser.txt
scripts/: audit.sh
src/: app.rs  config.rs  keybindings.rs  lib.rs  main.rs  preferences.rs  theme.rs
src/content/: jina.rs  mod.rs
src/feed/: discovery.rs  fetcher.rs  mod.rs  opml.rs  parser.rs
src/storage/: articles.rs  categories.rs  content_cache.rs  db.rs  feeds.rs  mod.rs  preferences.rs  reading_history.rs  schema.rs  search.rs  types.rs
src/ui/: articles.rs  categories.rs  events.rs  feeds.rs  help.rs  helpers.rs  input.rs  loop_runner.rs  mod.rs  reader.rs  render.rs  stats.rs  status.rs  whatsnew.rs
src/util/: mod.rs  text.rs  url_validator.rs
tests/: content_cache.rs  feed_lifecycle.rs
